--- a/themes/book-store/partials/section.htm
+++ b/themes/book-store/partials/section.htm
@@ -1,4 +1,6 @@
 <section>
-    <h2 class='text-center'>{{ title }}</h2>
+    {% if title != null %}
+        <h2 class='text-center py-4'>{{ title }}</h2>
+    {% endif %}
     {{ content|raw }}
 <section>
