--- a/themes/book-store/layouts/default.htm
+++ b/themes/book-store/layouts/default.htm
@@ -3,7 +3,12 @@
 function onStart()
 {
     $this['activeMenu'] = $this->page->viewBag['section'] ?? null;
+
+
+    $host = Request::getHost(); 
+    $this['vite_host'] = "http://" . $host . ":5173";
 }
+
 ?>
 ==
 <!DOCTYPE html>
@@ -11,9 +16,10 @@ function onStart()
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        {# <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"> #}
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <title>{{ this.page.title }}</title>
-    <script type="module" src="http://localhost:5173/src/main.js"></script>
+    <script type="module" src="{{ vite_host }}/src/main.js"></script>
 </head>
 <body class='d-flex flex-column' >
     {% partial 'header' %}
