--- a/themes/book-store/partials/home/featured-carousel.htm
+++ b/themes/book-store/partials/home/featured-carousel.htm
@@ -4,15 +4,32 @@ use Bookstore\Catalog\Models\Book;
 
 function onStart()
 {
-    $this['books'] = Book::where('is_featured', true)->paginate(5);
+    $this['books'] = Book::where('is_featured', true)->get();
 }
+
 ?>
 ==
-<div>
-    {% for book in books %}
-        <h4>{{ book.name }}</h4>
-    {% endfor %}
-    <div>
-        {{ books.render()|raw }}
+{% set btn_classes = "btn bg-dark text-light rounded-0 w-100 h-100" %}
+
+<div class="position-relative" data-embla-root>
+    <div class="embla-viewport">
+        <div class="embla-container">
+            {% for book in books %}
+            <div class="embla-slide">
+                {% partial 'book' index=loop.index0 %}
+            </div>
+            {% endfor %}
+        </div>
+    </div>
+
+    <div class="embla-button-wrapper">
+        <button class="{{ btn_classes }}" data-embla-btn="prev">
+            <i class="bi bi-chevron-left"></i>
+        </button>
+    </div>
+    <div class="embla-button-wrapper end-0">
+        <button class="{{ btn_classes }}" data-embla-btn="next">
+            <i class="bi bi-chevron-right"></i>
+        </button>
     </div>
 </div>
