feat: add buttons style

--- a/themes/book-store/assets/styles/main.scss
+++ b/themes/book-store/assets/styles/main.scss
@@ -7,7 +7,7 @@ $bootstrap-icons-font-dir: "bootstrap-icons/font/fonts";
 @import "bootstrap-icons/font/bootstrap-icons";
 
 @import './embla';
-
+@import './buttons';
 
 body {
     min-height: 100%;
