--- a/themes/book-store/partials/home/featured-carousel.htm
+++ b/themes/book-store/partials/home/featured-carousel.htm
@@ -9,7 +9,7 @@ function onStart()
 
 ?>
 ==
-{% set btn_classes = "btn bg-dark text-light rounded-0 w-100 h-100" %}
+{% set btn_classes = "btn bg-dark text-light w-100 h-100" %}
 
 <div class="position-relative" data-embla-root>
     <div class="embla-viewport">
