feat: add genres section

--- a/themes/book-store/partials/header.htm
+++ b/themes/book-store/partials/header.htm
@@ -1,9 +1,8 @@
-<header class="sticky-top"
-    style="">
+<header class="sticky-top">
     <nav class="site-header navbar navbar-expand-lg position-relative navbar-dark">
         <div class="container align-items-center">
             <div class="col">
-                <a class="navbar-brand " href="#zxc">Book Store</a>
+                <a class="navbar-brand " href="\">Book Store</a>
             </div>
             <div class="col collapse navbar-collapse">
                 <ul class="w-100 navbar-nav justify-content-center">
