refactoring: change layout

--- a/themes/book-store/layouts/default.htm
+++ b/themes/book-store/layouts/default.htm
@@ -22,7 +22,7 @@ function onStart()
 </head>
 <body class='d-flex flex-column' >
     {% partial 'header' %}
-    <main class='flex-fill'>
+    <main class='flex-fill d-grid'>
         {% page %}
     </main>
     {% partial 'footer' %}
