--- a/themes/book-store/assets/styles/_variables.scss
+++ b/themes/book-store/assets/styles/_variables.scss
@@ -18,3 +18,7 @@ $btn-border-radius: 0;
 $btn-border-radius-sm: 0;
 $btn-border-radius-lg: 0;
 $btn-font-weight: 700;
+
+$aspect-ratios: (
+  "2x3": 150%
+);
