--- a/themes/book-store/partials/catalog/books.htm
+++ b/themes/book-store/partials/catalog/books.htm
@@ -12,7 +12,7 @@
 <div class='row row-cols-3 g-1 mb-3'>
     {% for book in books %}
     <div>
-    {% partial 'book' index=loop.index %}
+    {% partial 'book' index=loop.index book=book %}
     </div>
     {% endfor %}
 </div>
